Bug 485185 - After deleting a Todo, the next one cannot be deleted with a key
Summary: After deleting a Todo, the next one cannot be deleted with a key
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: todoview (other bugs)
Version First Reported In: 6.0.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-07 13:55 UTC by Daniel Vrátil
Modified: 2024-04-14 13:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Vrátil 2024-04-07 13:55:47 UTC
Deleting a Todo with [Del] key automatically selects the next todo, but the [Del] key doesn't work for it, one has to either click it, or go to the next one and then go back to the previous one with arrow keys, after that [Del] key works again to delete the Todo.

The view only reacts to "Selection" change, but the view automatically re-selecting the next item after the orignal one was deletected doesn't count as a selection, I guess.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master
KDE Plasma Version: 6.0
KDE Frameworks Version:  git master
Qt Version: 6.6
Comment 1 Bug Janitor Service 2024-04-10 19:15:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/102
Comment 2 Daniel Vrátil 2024-04-14 13:36:11 UTC
Git commit b856f11cd2498aeed3b19bfdf672549b214d50ef by Daniel Vrátil.
Committed on 10/04/2024 at 19:56.
Pushed by dvratil into branch 'master'.

TodoView: Use current instead of selection to track active todo

Current index is implicit, so when one todo is deleted, the next one
automatically becomes current, so user can continue deleting, while
with selection, user had to manually update the selection in order to
be able to delete the next todo.
FIXED-IN: 24.05

M  +5    -6    src/todo/todoview.cpp
M  +1    -1    src/todo/todoview.h

https://invent.kde.org/pim/eventviews/-/commit/b856f11cd2498aeed3b19bfdf672549b214d50ef