TodoView: Use current instead of selection to track active todo

Current index is implicit, so when one todo is deleted, the next one
automatically becomes current, so user can continue deleting, while
with selection, user had to manually update the selection in order to
be able to delete the next todo.

BUG: 485185
FIXED-IN: 24.05